--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,85 +1,37 @@
-{% extends "base.html" %}
-<!-- Content block -->
-{% block content %}
-<div class="container-fluid" style="padding: 0; margin: 0;">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="/">
-            <img src="static/images/pomo-lg.png" alt="logo">
-            <span>Pomodoro-clone</span>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto main-nav">
-                {% if current_user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link " href="#"><i class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp;Stats</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa fa-cog" aria-hidden="true"></i>&nbsp;Settings</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa fa-comment" aria-hidden="true"></i>&nbsp;Feedback</a>
-                </li>
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false"><i class="fa fa-globe"
-                            aria-hidden="true"></i>&nbsp;English
-                    </a>
-                </li>
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-circle"
-                            aria-hidden="true"></i>&nbsp;{{current_user.username}}
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{{url_for('auth.logout')}}">Logout</a>
-                    </div>
-                </li>
-
-                {% else %}
-
-                <li class="nav-item">
-                    <a class="nav-link " href="{{url_for('main.new_task')}}"><i class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp;Stats</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa fa-cog" aria-hidden="true"></i>&nbsp;Settings</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa fa-comment" aria-hidden="true"></i>&nbsp;Feedback</a>
-                </li>
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false"><i class="fa fa-globe"
-                            aria-hidden="true"></i>&nbsp;English
-                    </a>
-                </li>
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-circle"
-                            aria-hidden="true"></i>&nbsp;Sign Up / Login
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{{url_for('auth.register')}}">Sign Up</a>
-                        <a class="dropdown-item" href="{{url_for('auth.login')}}">Login</a>
-                    </div>
-                </li>
-
-                {%endif%}
-
-            </ul>
-        </div>
-    </nav>
+<div class="navbar" role="navigation">
+  <div class="container-fluid">
+      <div class="navbar-header">
+          <div class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"
+              style="border-color: transparent;">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </div>
+          
+          <a class="navbar-brand" id="pitch" href="/" style="font-size: 25px;"> Blog </a>
+              
+              <a class="navbar-brand"></a>
+              
+          </div>
+          <div class="navbar-collapse collapse" style="float: left;">
+              <ul class="nav navbar-nav">
+                  <li><a href="/">Home</a></li>
+                  <li><a  class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="cursor: pointer;">Blogs</a>
+                      
+                  </li>
+                  <li><a href=""> Add a blog</a></li>
+                  
+              </ul>
+          </div>
+          <div class="navbar-collapse collapse " >
+            
+             <a class="btn my-2 my-sm-0" 
+                  href="" style="font-size: 14px; margin: 10px;  border-radius: 10px;">Sign In</a>
+                 <a class=" btn my-2 my-sm-0" href="" style="font-size: 14px; margin: 10px;  border-radius: 10px;">Sign Up</a>
+              
+            
+          </div>
+      </div>
+  </div>
 </div>
-{% endblock %}
