--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,37 +1,27 @@
-<div class="navbar" role="navigation">
-  <div class="container-fluid">
-      <div class="navbar-header">
-          <div class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"
-              style="border-color: transparent;">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-          </div>
-          
-          <a class="navbar-brand" id="pitch" href="/" style="font-size: 25px;"> Blog </a>
-              
-              <a class="navbar-brand"></a>
-              
-          </div>
-          <div class="navbar-collapse collapse" style="float: left;">
-              <ul class="nav navbar-nav">
-                  <li><a href="/">Home</a></li>
-                  <li><a  class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="cursor: pointer;">Blogs</a>
-                      
-                  </li>
-                  <li><a href=""> Add a blog</a></li>
-                  
-              </ul>
-          </div>
-          <div class="navbar-collapse collapse " >
-            
-             <a class="btn my-2 my-sm-0" 
-                  href="" style="font-size: 14px; margin: 10px;  border-radius: 10px;">Sign In</a>
-                 <a class=" btn my-2 my-sm-0" href="" style="font-size: 14px; margin: 10px;  border-radius: 10px;">Sign Up</a>
-              
-            
-          </div>
-      </div>
-  </div>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <div class="navbar navbar-inverse" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/"> Watchlist </a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Home</a></li>
+            </div>
+
+        </div>
+    </div>
+  </body>
+</html>
