--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,21 @@
-{% extends 'base.html' %}{% block styles%}
+{% extends 'base.html'%}
+{% import 'bootstrap/wtf.html' as wtf %}
+
+<!-- Styles block -->
+
+{% block styles%}
 {{ super() }}
-<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}" type="text/css">
-{% endblock styles%}
-<!-- Content block -->
-{% block content %}
-<div class="container text-center">
-    <div class="text-content">
-        
-    </div>
-</div>
+<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
 {% endblock %}
+{% block content %}
+<!-- Content block -->
+
+<div class="container text-center">
+  <div class="text-content">
+      <p style="font-size: 50px;"> WELCOME TO MY BLOG</p>
+      <br>
+      <p style="font-size: 25px;">Sign Up To view</p>
+  </div>
+</div>
+
+{% endblock%}
