--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -19,6 +19,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
+                    <li><a  href="{{ url_for('main.new_opinion')}}">Add a blog</a></li>
+                    <li class="nav-item">
+                      <a class="nav-link nav-link-custom" href="{{ url_for('main.all')}}">All Blogs</a>
+                    </li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
