--- a/app/templates/add_blog.html
+++ b/app/templates/add_blog.html
@@ -11,14 +11,13 @@
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-8 login-form">
-          <h2>Add Blog</h2>
-        
+          <h2>ADD A BLOG</h2>
+          
         <!-- Login form -->
         {{wtf.quick_form(form)}}
        
       </div>
       <div clas="col-md-2"> </div>
     </div>
-  </div>
 </div>
 {% endblock %}
