--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,21 +1,11 @@
-{% extends 'base.html'%}
-{% import 'bootstrap/wtf.html' as wtf %}
-
-<!-- Styles block -->
-
-{% block styles%}
+{% extends 'base.html' %}{% block styles%}
 {{ super() }}
-<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
-{% endblock %}
-{% block content %}
+<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}" type="text/css">
+{% endblock styles%}
 <!-- Content block -->
-
-<div class="container text-center">
-  <div class="text-content">
-      <p style="font-size: 50px;"> WELCOME TO MY BLOG</p>
-      <br>
-      <p style="font-size: 25px;">Sign Up To view</p>
-  </div>
+{% block content %}
+<div class="text-center">
+    <img style="width: 100%; height: 90vh; object-fit: cover; " src="{{url_for('static', filename='images/lib.jpg')}}">
+    
 </div>
-
-{% endblock%}
+{% endblock %}
